# php-rs

php-sys/: Cargo.toml  README.md  build.rs  wrapper.h
php-sys/example/: Cargo.toml  hello.php
php-sys/example/src/: hello.rs
sys/: Cargo.toml  README.md  build.rs
sys/example/: Cargo.toml
sys/example/src/: hello.rs  lib.rs
