[package]
name = "example"
version = "0.1.0"
authors = ["haochang <hackmasker@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "hello"
crate-type = ["cdylib"]

[dependencies]
php-sys = {path = "..", version = "0.1.0"}